--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
        <center><input class="h2" type="text" name="apellido" placeholder="Apellido"required><br><br></center>
        <center><input class="h3" type="email" name="email" placeholder="Email" required><br><br></center>
        <center><input class="h4" type="password" name="contraseña" placeholder="Contraseña" pattern='[a-zA-Z0-9!@#$&%*()\\-.+,\/"]'required><br><br></center>
-       <center><h1>La contraseña debe tener una letra Mayuscula, números y caracteres especiales("!#")</h1><br><br></center>
+       <center><h1 style="color: aliceblue;">La contraseña debe tener una letra Mayuscula, números y caracteres especiales("!#")</h1><br><br></center>
        <center><input class="h5" type="submit" name="enviar" ></center>
       </form> 
       
